--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1613,6 +1613,21 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  HUN_joseph_august:0 "József Ágost"
  HUN_karoly_huszar:0 "Károly Huszár"
  HUN_istvan_tisza:0 "István Tisza"
+ HUN_stromfel_aurel:0 "Stromfeld Aurél"
+ HUN_szanto_bela:0 "Szántó Béla"
+ HUN_steinbruck_ottothe:0 "Steinbrück Ottóthe"
+ HUN_pogany_jozsef:0 "Pogány József"
+ HUN_czobel_erno:0 "Czóbel Ernő"
+ HUN_Mark_Nandor:0 "Márk Nándor"
+ HUN_mellinger:0 "Mellinger"
+ HUN_kratochvil_karoly:0 "Kratochvil Károly"
+ HUN_julier_ferenc:0 "Julier Ferenc"
+ HUN_hamburger_jeno:0 "Hamburger Jenő"
+ HUN_vantus_karoly:0 "Vántus Károly"
+ HUN_rakosi_matyas:0 "Rákosi Mátyás"
+ HUN_weltner_jakab:0 "Weltner Jakab"
+ HUN_fiedler_rezso:0 "Fiedler Rezső"
+ HUN_tombor_jeno:0 "Tombor Jenő"
 
  # HYDERABAD
  HYD_mahbub_ali_khan:0 "Mahbub Ali Khan"
