--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5130,7 +5130,7 @@ ROM_invite_western_thinkers:0 "Invite Western Thinkers"
 ROM_invite_western_thinkers_desc:0 ""
 ROM_invest_in_romania_steel_industry:0 "Invest in Romania’s Steel Industry"
 ROM_invest_in_romania_steel_industry_desc:0 ""
-ROM_romania_for_those_who_deserve_it:0 "Romania for those who deserve it"
+ROM_romania_for_those_who_deserve_it:0 "Romania For Those Who Deserve it"
 ROM_romania_for_those_who_deserve_it_desc:0 ""
 ROM_austia_military_research:0  "Military Cooperation with Austria-Hungary"
 ROM_austia_military_research_desc:0 ""
