пацанский залив венгрии (generals and some focuses

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1683,6 +1683,24 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  HUN_weltner_jakab:0 "Weltner Jakab"
  HUN_fiedler_rezso:0 "Fiedler Rezső"
  HUN_tombor_jeno:0 "Tombor Jenő"
+ HUN_hazai_samu:0 "Hazai Samu"
+ HUN_lotaringiai_jozsef_foherceg:0 "Lotaringiai József főherceg"
+ HUN_tersztyanszky_karoly:0 "Tersztyánszky Károly"
+ HUN_brogli_puhallo_pal:0 "Brogli Puhallo Pál"
+ HUN_hauer_lipot:0 "Hauer Lipót"
+ HUN_arz_artur:0 "Arz Artúr"
+ HUN_korda_ignac:0 "Korda Ignác"
+ HUN_karl_von_lukas:0 "Karl von Lukas"
+ HUN_kovess_hermann:0 "Kövess Hermann"
+ HUN_rohr_ferenc:0 "Rohr Ferenc"
+ HUN_wilhelm_von_klobucar:0 "Wilhelm von Klobučar"
+ HUN_georg_reny:0 "Georg Schariczer von Rény"
+ HUN_heinrich_pongraz:0 "Heinrich Pongráz de Szent-Miklós et Óvár"
+ HUN_podhoranszky_jeno:0 "Podhoránszky Jenő"
+ HUN_gyarmati_dani:0 "Gyarmati Dáni Balázs"
+ HUN_mallasz_gusztav:0 "Mallász Gusztáv"
+ HUN_baro_samuel:0 "báró Sámuel Apór de Al-Tórja"
+ HUN_gombos_gyula:0 "Gömbös Gyula"
 
  # HYDERABAD
  HYD_mahbub_ali_khan:0 "Mahbub Ali Khan"
