crisis mechanic and focuses

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1701,7 +1701,27 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  HUN_mallasz_gusztav:0 "Mallász Gusztáv"
  HUN_baro_samuel:0 "báró Sámuel Apór de Al-Tórja"
  HUN_gombos_gyula:0 "Gömbös Gyula"
-
+# crisis
+hungarian_lands_crisis_alert_tt:0 "§RThe Hungarian lands crisis§! begins, opposing §Y[HUN.getFlag][HUN.getAdjective]§! claims for reparations toward §Y[FRA.getFlag][FRA.getName]§!."
+hungarian_lands_crisis_name_wargoal:0 "Hngarian lands crisis"
+hungarian_lands_crisis_entente_claims:0 "The Entente wants to take the land from Hungary."
+hungarian_lands_crisis_hungarian_claims:0 "Hungary wants more land"
+entente_is_winning:0 "Entente is winning"
+hungary_is_winning:0 "Hungary is winning"
+ #custom tt
+crisis_plus_10:0 "+ §G10§! Entente points!"
+crisis_plus_20:0 "+ §G20§! Entente points!"
+#focus
+HUN_social_democracy:0 "Social democratic Hungary"
+HUN_minority_rights:0 "Minority rights"
+HUN_offer_autonomy_to_minorities:0 "Offer autonomy to minorities"
+HUN_national_council:0 "National councils"
+HUN_contuine_hegyvideki_akcio:0 "Continue Hegyvidéki akció"
+HUN_expand_the_hegyvideki_akcio_to_slovaks:0 "Expand the Hegyvidéki akció to slovaks"
+HUN_eastern_switzerland_project:0 "Eastern Switzerland project"
+HUN_cantonise_transylvania:0 "Cantonise Transylvania"
+HUN_cantonese_slovakia_and_karpátalja:0 "Cantonese Slovakia and Kárpátalja"
+HUN_cantonise_southern_lands:0 "Cantonise Southern lands"
  # HYDERABAD
  HYD_mahbub_ali_khan:0 "Mahbub Ali Khan"
  HYD_osman_ali_khan:0 "Osman Ali Khan"
