--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1720,8 +1720,17 @@ HUN_contuine_hegyvideki_akcio:0 "Continue Hegyvidéki akció"
 HUN_expand_the_hegyvideki_akcio_to_slovaks:0 "Expand the Hegyvidéki akció to slovaks"
 HUN_eastern_switzerland_project:0 "Eastern Switzerland project"
 HUN_cantonise_transylvania:0 "Cantonise Transylvania"
-HUN_cantonese_slovakia_and_karpátalja:0 "Cantonese Slovakia and Kárpátalja"
 HUN_cantonise_southern_lands:0 "Cantonise Southern lands"
+HUN_cantonese_slovakia_and_karpatalja:0 "Cantonese Slovakia and Kárpátalja"
+# decision
+HUN_crisis:0 "Hungarian lands"
+HUN_crisis_mission:0 "Crisis ends"
+HUN_minority:0 "Our minorities"
+HUN_minority_mission:0 "Realese minority"
+#events
+ww1_hungary.1.t:0 "autonomus for russins"
+ww1_hungary.1.a:0 "Release Rusins"
+ww1_hungary.1.b:0 "NO"
  # HYDERABAD
  HYD_mahbub_ali_khan:0 "Mahbub Ali Khan"
  HYD_osman_ali_khan:0 "Osman Ali Khan"
