--- a/localisation/english/ww1_autonomy_l_english.yml
+++ b/localisation/english/ww1_autonomy_l_english.yml
@@ -9,6 +9,7 @@
  autonomy_tgwr_unilateral_union:0 "Unilateral Union"
  autonomy_tgwr_unilateral_union_desc:0 "The Cretan deputies declared unilateral union with Greece. The flag of the Cretan State was replaced by the Greek flag, all public servants took an oath to King Geórgios I of Greece, and the Greek constitution and laws were enacted on the island. This act was not recognized internationally, including by Greece."
  autonomy_tgwr_ottoman_emirate:0 "Ottoman Emirate"
+ autonomy_tgwr_ottoman_mutasarrifate:0 "Mutasarrifate"
  autonomy_tgwr_ottoman_autonomous_vilayet:0 "Autonomous Vilayet"
  autonomy_tgwr_ottoman_committee_government:0 "Committee Government"
  autonomy_tgwr_concession:0 "Concession"
