social democracy path

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1722,6 +1722,28 @@ HUN_eastern_switzerland_project:0 "Eastern Switzerland project"
 HUN_cantonise_transylvania:0 "Cantonise Transylvania"
 HUN_cantonise_southern_lands:0 "Cantonise Southern lands"
 HUN_cantonese_slovakia_and_karpatalja:0 "Cantonese Slovakia and Kárpátalja"
+HUN_support_labor_unions:0 "Support labor unions"
+HUN_land_reform:0 "Land reform"
+HUN_workers_right:0 "Workers rights"
+HUN_better_living_conditions_for_workers:0 "Better living conditions for the workers"
+HUN_move_universities:0 "Move Universities"
+HUN_help_farmers:0 "Help farmers"
+HUN_better_pay:0 "Better pay"
+HUN_universal_and_secret_voting:0 "Universal and secret voting"
+HUN_women_rights:0 "Women rights"
+HUN_fire_the_high_command:0 "Fire the high command"
+HUN_neglect_the_army:0 "Neglect the army"
+HUN_educate_soldier:0 "Educate the soldiers"
+#idea
+HUN_economy_in_ruins:0 "Economy in ruins"
+HUN_entente_blockade:0 "Entente blockade"
+HUN_weak_administration:0 "Weak administration"
+HUN_neglected_army:0 "Neglected army"
+HUN_eastern_switzerland:0 "Eastern Switzerland"
+HUN_labor_unions:0 "Labor unions"
+HUN_move_unik:0 "Move universites"
+HUN_better_pay_idea:0 "Better pay"
+
 # decision
 HUN_crisis:0 "Hungarian lands"
 HUN_crisis_mission:0 "Crisis ends"
