--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5154,6 +5154,15 @@ ROM_national_unity_desc:0 ""
 ROM_national_unity.tt:0 "For every §Y8.00%§! §qProto-Fascist§! support, this focus will give us:\nGain Base Stability: §G+1.00%§!.\n\nBecause of our current §qFascist§! support, this focus will give:"
 ROM_reconcile_pcd:0 "Reconcile the PCD"
 ROM_reconcile_pcd_desc:0 ""
+ROM_great_egoism:0 "Great Egoism"
+ROM_accept_the_call_to_war:0 "Accept the call to war"
+ROM_anti_russianism:0 "Anti-Russianism"
+ROM_german_support:0 "German support"
+ROM_romanian_claims:0 "Romanian claims"
+ROM_please_bucovina:0 "Ask for a Bukovina"
+ROM_secure_bulgaria:0 "Bulgarian security"
+ROM_operation_sarbia:0 "Serbian operation"
+ROM_neutral:0 "Neutral"
  #custom tooltips
 ROM_the_kings_government:0 "The King's Government"
 ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
