--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5155,13 +5155,13 @@ ROM_national_unity.tt:0 "For every §Y8.00%§! §qProto-Fascist§! support, this
 ROM_reconcile_pcd:0 "Reconcile the PCD"
 ROM_reconcile_pcd_desc:0 ""
 ROM_great_egoism:0 "Great Egoism"
-ROM_accept_the_call_to_war:0 "Accept the call to war"
+ROM_accept_the_call_to_war:0 "Accept The Call To War"
 ROM_anti_russianism:0 "Anti-Russianism"
-ROM_german_support:0 "German support"
-ROM_romanian_claims:0 "Romanian claims"
-ROM_please_bucovina:0 "Ask for a Bukovina"
-ROM_secure_bulgaria:0 "Bulgarian security"
-ROM_operation_sarbia:0 "Serbian operation"
+ROM_german_support:0 "German Support"
+ROM_romanian_claims:0 "Romanian Claims"
+ROM_please_bucovina:0 "Ask For a Bukovina"
+ROM_secure_bulgaria:0 "Bulgarian Security"
+ROM_operation_sarbia:0 "Serbian Operation"
 ROM_neutral:0 "Neutral"
  #custom tooltips
 ROM_the_kings_government:0 "The King's Government"
