annex mount lebanon focus

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2895,11 +2895,13 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_combat_rebels_in_ahikerya:0 "Combat Rebels in [975.GetName]"
  TUR_combat_rebels_in_ahikerya_desc:0 "Though our rule has always been unpopular, the recent Greek revolt in [975.GetName] has been unexpected. While the force rebelling force of the army is nothing compared to the might of our empşre, it'll take some time to totally surpress it due to the logistical limitations."
  TUR_combat_rebels_in_ahikerya_tt:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §R+30.0%§!\n"
- TUR_combat_rebels_in_ahikerya_tt2:0 "Modify[TUR_get_state_minority] by\n£political_violence_texticon  Resistance Target: §G-10%§!\n£attrition_texticon  Division Attrition: §G-30.0%§!\n"
+ TUR_combat_rebels_in_ahikerya_tt2:0 "Modify [TUR_get_state_minority] by\n£political_violence_texticon  Resistance Target: §G-10%§!\n£attrition_texticon  Division Attrition: §G-30.0%§!\n"
  TUR_combat_rebels_in_ahikerya_tt3:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §G-30.0%§!\n"
  TUR_grant_autonomy_to_ahikerya:0 "Grant Autonomy to [975.GetName]"
  TUR_grant_autonomy_to_ahikerya_desc:0 "The recent Greek revolt in [975.GetName] has tightened our hands. Due to the georgaphical limitations, simply taking down the rebellion would take too much time. Simply granting the island autonomy would solve the problem."
- TUR_grant_autonomy_to_ahikerya_tt:0 "\nModify[TUR_get_state_minority] by\n£political_violence_texticon  Resistance Target: §G-100%§!\n"
+ TUR_grant_autonomy_to_ahikerya_tt:0 "\nModify [TUR_get_state_minority] by\n£political_violence_texticon  Resistance Target: §G-100%§!\n"
+
+ TUR_get_state_minority:0 "[TUR_get_state_minority]"
  TUR_armenian_to_greek_minority:0 "Replace £ww1_flag_ARM  §YArmenian Minority§! with £ww1_game_rule_flag_GRE  §YGreek Minority§!\nEffective change:\n[TUR_minority_attrition_down][TUR_minority_army_defence_factor_down][TUR_minority_enemy_local_supplies_down][TUR_minority_recruitable_population_down][TUR_minority_stability_war_support_down][TUR_minority_stability_down][TUR_minority_war_support_down]"
  TUR_armenian_to_jewish_minority:0 "Replace £ww1_flag_ARM  §YArmenian Minority§! with £ww1_flag_ISR  §YJewish Minority§!\nEffective change:\n[TUR_minority_attrition_down][TUR_minority_army_defence_factor_down][TUR_minority_enemy_local_supplies_down][TUR_minority_recruitable_population_down][TUR_minority_stability_war_support_down][TUR_minority_stability_down][TUR_minority_war_support_down]"
  TUR_armenian_to_south_slavic_minority:0 "Replace £ww1_flag_ARM  §YArmenian Minority§! with £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§!\nEffective change:\n[TUR_minority_attrition_down][TUR_minority_army_defence_factor_down][TUR_minority_enemy_local_supplies_down][TUR_minority_recruitable_population_down][TUR_minority_stability_war_support_down][TUR_minority_stability_down][TUR_minority_war_support_down]"
@@ -3030,7 +3032,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_abolish_slavery_in_yemen_desc:0 "The question of slavery in the vilayet of Yemen has always been a sensitive topic regarding our central state. As our government has granted equality to all its citizens under the second constitution, we have to abolish slavery in Yemen."
  TUR_surpress_arab_dissent:0 "Surpress Arab Dissent"
  TUR_surpress_arab_dissent_desc:0 "Our Arab population in [FROM.GetName] has proven to be quite unsatisfied with our rule. In order to protect the integrity of the state, we must purge the territory from any dissent it has under it."
- TUR_ban_arab_newspapers:0 "Ban Arab Newspapers in the Vilayer of [FROM.GetName]"
+ TUR_ban_arab_newspapers:0 "Ban Arab Newspapers in Vilayet of [FROM.GetName]"
  TUR_ban_arab_newspapers_desc:0 "Arab nationalist newspapers have been getting more and more popular in the last few years. As these newspapers popularize and perhaps even trigger Arab rebellions, the only logical option we have is to entirely outlaw them."
  TUR_ban_arab_newspapers_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£political_violence_texticon  Resistance Target: §G-5%§!\n£compliance_gain_texticon  Compliance Growth Speed: §R-10%§!\n"
  TUR_forced_labor_in_middle_east:0 "Forced Labor in [FROM.GetName]"
@@ -3074,7 +3076,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_scrap_the_treaty_of_daan_desc:0 "Though we found the solution in granting autonomy to Imam Yahya, ending centuries old Yemeni-Ottoman conflict, the current state of the nation favors us to abolish their autonomy."
  TUR_abolish_principality_of_samos:0 "Abolish Principality of Samos"
  TUR_abolish_principality_of_samos_desc:0 "Granted self-rule in 1834, Samos has been enjoying large scale autonomy with its own governor and parliament. Yet as we're trying to integrate our empire, we cannot let this autonomous region to exist within our empire."
-
+ 
+ TUR_modify_state_minority_by:0 "Modify [TUR_get_state_minority] by\n"
  TUR_minority_local_factories_down:0 "[TUR_minority_local_factories_down]"
  TUR_minority_local_factories_normal:0 "£civ_factory  Local Factories: §G+5%§!\n"
  TUR_minority_local_factories_4:0 "£civ_factory  Local Factories: §G+4%§!\n"
@@ -3219,7 +3222,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_stability_1:0 "£stability_texticon  Stability: §G+0.10%§!\n"
  TUR_minority_war_support_down:0 "[TUR_minority_war_support_down]"
  TUR_minority_war_support_normal:0 "£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
- TUR_minority_stability_up_1:0 "\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n"
+ TUR_minority_stability_up_1:0 "Modify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n"
 
  TUR_sway_the_army:0 "Sway the Army"
  TUR_sway_the_army_desc:0 "Army has always held an important position in the Ottoman society. Especially after the 31 March Incident, importance of army became more and more entrenched. Importance of the army even tips off the balance in the struggle for control over the regime."
@@ -9154,7 +9157,6 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_centralize_kurdish_lands:0 "Centralize Kurdish Lands"
  TUR_centralize_levant:0 "Centralize Levant"
  TUR_centralize_mesapotamia:0 "Centralize Mesapotamia"
- TUR_integrate_hejaz:0 "Integrate Hejaz"
  TUR_crush_yemeni_seperatists:0 "Crush Yemeni Seperatists"
  TUR_integrate_the_gulf_states_decision:0 "Integrate the Gulf States"
  TUR_send_garrison_into_the_arabian_desert:0 "Send Garrisons into the Arabian Desert"
