--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4485,6 +4485,10 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.131.t:0 "Asien-Korps Arrived"
  ottoman.131.d:0 "Our ally [GER.GetName] has sent a detachment of their army to aid our war effort. Consisting of mostly pioneers and tropical medics, these troops will aid railway construction on our Palestinian front."
  ottoman.131.a:0 "May Allah bless [GER.GetName]."
+ ottoman.132.t:0 "Status of Mount Lebanon Mutasarrifate"
+ ottoman.132.d:0 "Following the 1860 Druze–Maronite conflict in Mount Lebanon, sectarian issues became more apparent to the European powers. As they've meddled with our internal affairs, a large autonomy in Mount Lebanon was established. Named Mount Lebanon Mutasarrifate, the region would be governed by a Christian Mutasarrif and an administrative concil. While the region was exempt of taxation and conscription, it drifted further apart from the empire and took its own administrative decisions. As we're aiming to curb such autonomous structures in our empire, we can occupy Mount Lebanon with our troops. Though that'd guarantee foreign invovlement, perhaps a middle ground can better serve our aims."
+ ottoman.132.a:0 "Dissolve the mutasarrifate, but keep the autonomy."
+ ottoman.132.b:0 "Mount Lebanon shall be integrated back to the empire."
 
  ottoman_syria.1.t:0 "Küçük Cemal to Syria"
  ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Küçük Cemal Paşa will be appointed to Syria."
