--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -507,3 +507,5 @@
  judicial_reformer:0 "Judicial Reformer"
  TUR_uncrowned_king:0 "Uncrowned King"
  railway_engineer:0 "Railway Engineer"
+ LEB_mutasarrif:0 "Mutasarrif"
+ LBA_vice_president_habib_pacha_saad:0 "Vice-President of the Administrative Board"
