pro german tree aditions

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5162,7 +5162,13 @@ ROM_romanian_claims:0 "Romanian Claims"
 ROM_please_bucovina:0 "Ask For a Bukovina"
 ROM_secure_bulgaria:0 "Bulgarian Security"
 ROM_operation_sarbia:0 "Serbian Operation"
-ROM_neutral:0 "Neutral"
+ROM_neutral:0 ""Neutrality""
+ROM_crush_the_entente_supporters:0 "Crush The Entente Supporters"
+ROM_crush_the_entente_supporters_desc:0 ""
+ROM_war_propaganda:0 "War Propaganda"
+ROM_war_propaganda_desc:0 ""
+ROM_general_mobilization:0 "General Mobilization"
+ROM_general_mobilization_desc:0 ""
  #custom tooltips
 ROM_the_kings_government:0 "The King's Government"
 ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
