--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1422,10 +1422,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ROM_sue_for_peace_HUN:0 "Offer Surrender Terms to [HUN.GetName]"
  ROM_army_reform_decision:0 "Army Reorganization"
  ROM_fix_the_railways:0 "Fix the Railways"
- ROM_fixing_the_railways.tt:0 "\nWhen this decision is taken:\n§YFor 365 Days:§!\nConsumer Goods Factories factor: §Y10.0%§!\n\n§YEffects when removed:§!\nModify §YPoor Railway System§! by\nConsumer Goods Factories factor: §Y-5.0%§!\nConstruction Speed: §G+5.00%§!"
- ROM_kings_country_category:0 "Kings country"
- ROM_kings_country_category_desc:0 "kings approval of government §Y[?kings_approval_of_government]§!"
- ROM_king_appoints_new_government:0 "King Appoints New Government"
+ ROM_fixing_the_railways.tt:0 "\nWhen this decision is taken:\n§YFor 365 Days:§!\nConsumer Goods Factories factor: §Y10.0%§!\n\n§YEffects when removed:§!\nModify §YPoor Railway System§! by\nConsumer Goods Factories factor: §Y-5.0%§!\nConstruction Speed: §G+5.00%§!\nLocal Supply Impact: §G-5%§!"
+
 
 
  MOL_join_romania:0 "Join Romania"
@@ -8523,12 +8521,8 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  SAU_Egypt_friend: "§nRelations with Egypt will not be severed!§!"
  SAU_Egypt_enemy: "§RRelations with Egypt will be severed!§!"
  SAU_Foreign_relations: "Foreign Relations Department"
- WWI_Rashidi_conflict_category: "Second Saudi-Rashidi War"
- WWI_Rashidi_conflict_category_desc: "For decades, the houses of Saud and Rashid have been engaged in longstanding conflict and warfare. As the Ottomans are occupied with the demands of the so-called Great War, the opportunity presents itself for Al Saud to decisively confront and overcome Al Rashid in this ongoing struggle for dominance in the Arabian Peninsula. With regional dynamics shifting amidst global turmoil, Abdulaziz Al Saud aims to consolidate his authority and extend his influence, marking a significant turning point in the historical rivalry between these powerful Arabian clans"
- SAU_attack_hail: "Attack Ha'il"
- SAU_attack_hail_flag: "Attacking Ha'il"
- JBS_attack_qassim: "Attack Qassim"
- JBS_attack_qassim_flag: "Attacking Qassim"
+ SAU_WWI_Rashidi_conflict_category: "Second Saudi-Rashidi War"
+ SAU_WWI_Rashidi_conflict_category_desc: "For decades, the houses of Saud and Rashid have been engaged in longstanding conflict and warfare. As the Ottomans are occupied with the demands of the so-called Great War, the opportunity presents itself for Al Saud to decisively confront and overcome Al Rashid in this ongoing struggle for dominance in the Arabian Peninsula. With regional dynamics shifting amidst global turmoil, Abdulaziz Al Saud aims to consolidate his authority and extend his influence, marking a significant turning point in the historical rivalry between these powerful Arabian clans"
  SAU_Egyptian_adv_tt: "Unlocks §YEgyptian§! Advisors."
  SAU_Iraqi_adv_tt: "Unlocks §YIraqi§! Advisors."
  SAU_Syrian_adv_tt: "Unlocks §YSyrian§! Advisors."
@@ -8957,9 +8951,6 @@ FRA_front_populaire_desc:0 "The Popular Front united the left-liberal, radical s
  armenian_claims:0 "Armenian-claimed Territories"
  azeri_claims:0 "Azeri-claimed Territories"
  georgian_claims:0 "Georgian-claimed Territories"
- join_transcaucasia:0 "Join [FROM.GetNameDef]"
- GEO_transcaucasia_modifier:0 "Transcaucasian State"
-
  MTG_auto_update_tons:0 "Navy inventory"
  MTG_TWGR_auto_update_tons:0 "Update the navy tonnage each 14 days."
 
@@ -9145,7 +9136,7 @@ FRA_MOR_create_colonial_division:0 "Create a Division with §Y4 Infantry Batalli
  Big_Saud_low: "Low Reformist Support"
  SAU_Ikhwan_revolt_mission: "Ikhwani Revolt"
  SAU_Abdulrahman_returns: "Return of Abdulrahman"
- SAU_support_urban_merchants: "Support Hadar Nejd" #حضر نجد
+ SAU_support_urban_merchants: "Support Urban Merchants"
  SAU_recruit_city_fighters: "Recruit City Fighters"
  SAU_free_slaves: "Free Slaves"
  SAU_rally_allies: "Rally Reformists"
@@ -9307,17 +9298,3 @@ FRA_worker_safety_law_desc:0 "The law proposed by Deputy §YAristide Briand§! a
 
 FRA_salary_limitation_act:0 "Salary Limitation Act"
 FRA_salary_limitation_act_desc:0 "The law proposed by §YMaurice Thorez§! define a calculation formula limiting the maximum salary within a company based on its profits, the number of employees and the lowest salary. To resume it in its simplest form, it limits the maximum salary to 25 times the lowest salary in the company."
-
-#Romania
-king_opinion_set_n.tt:0 "The king's opinion of the current government become §YNeutral§!, which gives us:\nDaily Political Power Gain: §Y+0.00§!\nStability: §Y+0.00%§!"
-king_opinion_improve.tt:0 "The king's opinion of the current government will §Gimprove§!"
-king_opinion_worse.tt:0 "The king's opinion of the current government will §Rworsen!"
-
- ROM_kings_country_category:0 "The Puppet Master"
- ROM_kings_country_category_desc:0 "While a constitutional monarchy with quite strong seperations of power, the constitution does delegate many powers to the king. Romanias king can outright dismiss governments as well as dissolve parliament in times of crisis. While very rarely used, while also holding huge influence over the opinions of Romanias public and politicians. If the king is angered by our government too much, they may support the opposition or even resort to §Rextreme measures§!. In addition, if the king approves of our government, they may use their political clout to help push our agenda.\n\nThe king's opinion can very from the following:\n§RVery negative§!, which gives us:\nDaily Political Power Gain: §R-0.20§!\nStability: §R-12.00%§!\n§ONegative§!, which gives us:\nDaily Political Power Gain: §R-0.10§!\nStability: §R-6.00%§!\n§YNeutral§!, which gives us:\nDaily Political Power Gain: §Y+0.00§!\nStability: §Y+0.00%§!\n§7Positive§!, which gives us:\nDaily Political Power Gain: §G+0.10§!\nStability: §G+6.00%§!\n§GVery positive§!, which gives us:\nDaily Political Power Gain: §G+0.20§!\nStability: §G+12.00%§!\n\nThe king's current opinion of the government is [KingsOpinionRomania]"
-ROM_king_view_complete_disapprove:0 "§RVery negative§!, which gives us:\nDaily Political Power Gain: §R-0.20§!\nStability: §R-12.00%§!"
-ROM_king_view_disapprove:0 "§ONegative§!, which gives us:\nDaily Political Power Gain: §R-0.10§!\nStability: §R-6.00%§!"
-ROM_king_view_neutral:0 "§YNeutral§!, which gives us:\nDaily Political Power Gain: §Y+0.00§!\nStability: §Y+0.00%§!"
-ROM_king_view_approve:0 "§7Positive§!, which gives us:\nDaily Political Power Gain: §G+0.10§!\nStability: §G+6.00%§!"
-ROM_king_view_complete_approve:0 "§GVery positive§!, which gives us:\nDaily Political Power Gain: §G+0.20§!\nStability: §G+12.00%§!"
-ROM_kings_rotation:0 "Kings Rotation"
