--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1018,6 +1018,7 @@
  STATE_1017: "Yozgat"
  STATE_1018: "Çatalca"
  STATE_1019: "İzmit"
+ STATE_1020: "Maubegue-Givet"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
