pro german tree expansion

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5157,11 +5157,11 @@ ROM_reconcile_pcd_desc:0 ""
 ROM_great_egoism:0 "Great Egoism"
 ROM_accept_the_call_to_war:0 "Accept The Call To War"
 ROM_anti_russianism:0 "Anti-Russianism"
-ROM_german_support:0 "German Support"
+ROM_german_support:0 "Lessons Of The Prussians"
 ROM_romanian_claims:0 "Romanian Claims"
 ROM_please_bucovina:0 "Ask For a Bukovina"
 ROM_secure_bulgaria:0 "Bulgarian Security"
-ROM_operation_sarbia:0 "Serbian Operation"
+ROM_operation_sarbia:0 "Fall Sarbia"
 ROM_neutral:0 ""Neutrality""
 ROM_crush_the_entente_supporters:0 "Crush The Entente Supporters"
 ROM_crush_the_entente_supporters_desc:0 ""
@@ -5173,6 +5173,10 @@ ROM_diplomatically_isolate_bulgaria:0 "Diplomatically Isolate Bulgaria"
 ROM_diplomatically_isolate_bulgaria_desc:0 ""
 ROM_secure_internal_support:0 "Secure Internal Support"
 ROM_secure_internal_support_desc:0 ""
+ROM_expand_artillery_production:0 "Expand Artillery Production"
+ROM_expand_artillery_production_desc:0 ""
+ROM_promise_of_reform:0 "Promise Of Reform"
+ROM_promise_of_reform_desc:0 ""
  #custom tooltips
 ROM_the_kings_government:0 "The King's Government"
 ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
