--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3068,6 +3068,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_usurp_assyrian_properties_tt:0 "Modify [TUR_get_state_minority] by\n£civ_factory  Max Factories in a State: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\n\n"
  TUR_massacre_assyrians:0 "Massacre Assyrians in [FROM.GetName]"
  TUR_massacre_assyrians_desc:0 "There are several towns and villages that accompany a large Assyrian population in [FROM.GetName]. By massacring them in their native lands, we can create an ethnically homogenious society."
+ TUR_occupy_mount_lebanon:0 "Occupy Mount Lebanon"
+ TUR_occupy_mount_lebanon_desc:0 "After Mount Lebanon gained its vast autonomy in 1861, the region enjoyed tax and conscription exceptions. In addition to these, the Ottoman army was not allowed to enter the region. By occupying Mount Lebanon, we'll put our desired candidate in charge of the Mutasarrifate."
  TUR_repel_the_grece_memorandum:0 "Repel the Greçë Memorandum"
  TUR_repel_the_grece_memorandum_desc:0 "Even though we've decided to give Albanians autonomy through approving Greçë Memorandum, the push for centralization effort in our country cannot bestove any special status to Albanians."
  TUR_lift_the_armenian_reforms:0 "Lift the Armenian Reforms"
