--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4951,11 +4951,10 @@
  TUR_central_administration_in_syria:0 "Central Administration in Syria"
  TUR_central_administration_in_syria_desc:0 "Syria as a region has included some of the most important vilayets and cities for our empire, both in terms of tax revenue and legitimacy. While the importance of these vilayets has been unquestionable, there is still quite a road ahead for the region to be fully centralized."
  TUR_central_administration_in_syria_tt:0 "Unlocks £decision_icon_small  §YPro-Ottoman Propaganda for Shia's§! Decisions."
+ TRS_not_complete_syrian_reforms:0 "§YOttoman Syria§!: Has not completed focus §YSyrian Reforms§!"
  TUR_entrench_rule_in_mesapotamia:0 "Entrench Rule in Mesapotamia"
  TUR_entrench_rule_in_mesapotamia_desc:0 "Mesapotamia has enjoyed some degree of autonomy after its incorporation into our empire. Yet the gradual centralization of our empire has started to integrate the region as regular vilayets, just like any other internal administrative division within our empire. As the integration process continues in our empire, so will our rule entrench in the region."
  TUR_entrench_rule_in_mesapotamia_tt:0 "Unlocks £decision_icon_small  §YPro-Ottoman Propaganda for Shia's§! Decisions."
- TUR_abolish_mount_lebanon_mutasarrifate:0 "Abolish Mount Lebanon Mutasarrifate"
- TUR_abolish_mount_lebanon_mutasarrifate_desc:0 "Established under the foreign supervision, Mount Lebanon Mutasarrifate is an autonomous Mutasarrifate ruled by Mutasarrifs. Under our centralization efforts, we'll lift this special status of Mount Lebanon and make it a yet again a part of vilayet of Beirut."
  TUR_integrate_hejaz_desc:0 "Integrate Hejaz"
  TUR_integrate_hejaz_desc_desc:0 "Hejaz due to its lack of infrastructure and railway development, and its various statuses as autonomies has resulted in the development of influential regional powers paying tribute to the state rather than the state control itself. As we desire to form a centralized empire, we must continue our efforts on integrating Hejaz."
  TUR_integrate_hejaz_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n\n"
