Revert "more updates"
This reverts commit f8414fce8b70342899920e07e939c7260fe73169.

--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -451,8 +451,8 @@
  police_officer:0 "Police Officer"
  oil_baron:0 "Oil Baron"
  MON_spiritual_leader:0 "Jebtsundamba Khutuktu"
- TUR_joint_administration_of_the_foreign_ministry:0 "Joint Administration of the Foreign Ministry"
- TUR_joint_administration_of_the_environment_ministry:0 "Joint Administration of the Environment Ministry"
+ TUR_joint_nafia_naziri:0 "Joint Administration of the Environment Ministry"
+ TUR_joint_hariciye_naziri:0 "Joint Administration of the Foreign Ministry"
  TUR_defeatist_vizier:0 "Defeatist Vizier"
  TUR_defeatist_vizier_tt:0 "  - Effects when defensive war with a major:\nGets event '§Yİbrahim Hakkı Paşa Resigns§!'"
  TUR_hero_of_31_march:0 "Hero of 31 March"
@@ -491,6 +491,10 @@
  TUR_only_one_governor_of_aleppo:0 "The government can only have one §YGovernor of Aleppo§!."
  TUR_governor_of_damascus_hulusi_bey:0 "Governor of Damascus"
  TUR_governor_of_damascus_hasan_tahsin:0 "Governor of Damascus"
+ TUR_mutasarrif_of_mount_lebanon_yusuf_pasha:0 "Mutasarrif of Mount Lebanon"
+ TUR_mutasarrif_of_mount_lebanon_ohannes_kuyumcuyan:0 "Mutasarrif of Mount Lebanon"
+ TUR_mutasarrif_of_mount_lebanon_ali_munif_yegenaga:0 "Mutasarrif of Mount Lebanon"
+ TUR_mutasarrif_of_mount_lebanon_ismail_hakki_bey:0 "Mutasarrif of Mount Lebanon"
  TUR_only_one_mutasarrif_of_mount_lebanon:0 "The government can only have one §YMutasarrif of Mount Lebanon§!."
  TUR_pro_ottoman_pan_islamist:0 "Pro-Ottoman Pan-Islamist"
  TUR_pro_ottoman_mufti:0 "Pro-Ottoman Mufti"
@@ -504,6 +508,4 @@
  TUR_uncrowned_king:0 "Uncrowned King"
  railway_engineer:0 "Railway Engineer"
  LEB_mutasarrif:0 "Mutasarrif"
- LEB_defying_democracy:0 "Defying Democray"
- LEB_reformer_of_lebanon:0 "Reformer of Lebanon"
  LBA_vice_president_habib_pacha_saad:0 "Vice-President of the Administrative Board"
