Revert "annex mount lebanon focus"
This reverts commit e6e2d9a95a42b6fa692492f1704ae87b2d312470.

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1314,12 +1314,9 @@
  SYR_young_arab_party_long:0 "Al-Fatat"
  
  LEB_fascism_party:0 "Kataeb"
- LEB_neutrality_party:0 "Administrative Council"
- LEB_manorite_party:0 "Maronite Patriarchy"
- LEB_communism_party:0 "SLCP"
- LEB_communism_party_long:0 "Syrian-Lebanese Communist Party"
- LEB_democratic_party:0 "BRM"
- LEB_democratic_party_long:0 "Beirut Reform Movement"
+ LEB_neutrality_party:0 "Maronite Patriarchy"
+ LEB_communism_party:0 "Syrian-Lebanese Communist Party"
+ LEB_democratic_party:0 "Beirut Reform Movement"
  
  JOR_fascism_party:0 "Jordanian Phalange"
  JOR_neutrality_party:0 "Al Hashimiyyun"
