--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3066,8 +3066,16 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_usurp_assyrian_properties_tt:0 "Modify [TUR_get_state_minority] by\n£civ_factory  Max Factories in a State: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\n\n"
  TUR_massacre_assyrians:0 "Massacre Assyrians in [FROM.GetName]"
  TUR_massacre_assyrians_desc:0 "There are several towns and villages that accompany a large Assyrian population in [FROM.GetName]. By massacring them in their native lands, we can create an ethnically homogenious society."
+ TUR_lift_the_mutasarrifate_of_catalca:0 "Lift the Mutasarrifate of Çatalca"
+ TUR_lift_the_mutasarrifate_of_catalca_desc:0 "Mutasarrifate of Çatalca is an autonomous Sanjak within the vilayet of Konstantiniyye. Under our centralization efforts, we'll lift this special status of Çatalca and make it a yet again Ottoman vilayet."
+ TUR_lift_the_mutasarrifate_of_izmit:0 "Lift the Mutasarrifate of İzmit"
+ TUR_lift_the_mutasarrifate_of_izmit_desc:0 "Mutasarrifate of İzmit being an autonomous sanjak under Vilayet of Hüdavendigar. Under our centralization efforts, we'll lift this special status of İzmit and make it a yet again Ottoman vilayet."
+ TUR_lift_the_mutasarrifate_of_biga:0 "Lift the Mutasarrifate of Biga"
+ TUR_lift_the_mutasarrifate_of_biga_desc:0 "Mutasarrifate of Biga is an autonomous Sanjak within the vilayet of Archipelago. Under our centralization efforts, we'll lift this special status of Biga and make it a yet again Ottoman vilayet."
  TUR_lift_the_mount_lebanon_mutasarrifate:0 "Lift the Mount Lebanon Mutasarrifate"
  TUR_lift_the_mount_lebanon_mutasarrifate_desc:0 "Established under the foreign supervision, Mount Lebanon Mutasarrifate is an autonomous Mutasarrifate ruled by Mutasarrifs. Under our centralization efforts, we'll lift this special status of Mount Lebanon and make it a yet again Ottoman vilayet."
+ TUR_lift_the_mutasarrifate_of_jerusalem:0 "Lift the Mutasarrifate of Jerusalem"
+ TUR_lift_the_mutasarrifate_of_jerusalem_desc:0 "Established due to foreign interest, Mutasarrifate of Jerusalem was established in 1872 as a region with special status. Under our centralization efforts, we'll lift this special status of Jerusalem and make it a yet again Ottoman vilayet."
  TUR_abolish_the_sharifate_of_mecca:0 "Abolish the Sharifate of Mecca"
  TUR_abolish_the_sharifate_of_mecca_desc:0 "Sharifate of Mecca has enjoyed a degree of autonomy across centuries under numerous empires. Yet as the era of decentralized tax empires are coming to an end, we'll abolish the autonomous status this sharifate has and integrate it into our empire."
  TUR_repel_the_grece_memorandum:0 "Repel the Greçë Memorandum"
