special mount lebanon

--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -703,6 +703,8 @@
  TUR_azerbaijani_minority:0 "£ww1_flag_AZR  Azerbaijani Minority"
  TUR_azerbaijani_minority_desc:0 "Among all the minorities, this state is populated mostly by Azerbaijanis. This results in an overall increased opinion of us by the locals and gives us an easier time with ruling these lands."
  TUR_minority_revolt_tt:0 "If §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n"
+ TUR_autonomous_vilayet_lebanon:0 "Autonomous Mutasarrifate"
+ TUR_autonomous_vilayet_lebanon_desc:0 "Special administrative of Mount Lebanon Mutasarrifate provides them with tax collection and conscription exceptions while preventing our troops from entering the region."
  TUR_autonomous_vilayet:0 "Autonomous Vilayet"
  TUR_autonomous_vilayet_desc:0 "Autonomous vilayets restrict our access to the states factories and resources yet provides us with increased local compliance and stability."
  TUR_semi_autonomous_vilayet:0 "Semi-Autonomous Vilayet"
