--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2895,11 +2895,13 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_combat_rebels_in_ahikerya:0 "Combat Rebels in [975.GetName]"
  TUR_combat_rebels_in_ahikerya_desc:0 "Though our rule has always been unpopular, the recent Greek revolt in [975.GetName] has been unexpected. While the force rebelling force of the army is nothing compared to the might of our empşre, it'll take some time to totally surpress it due to the logistical limitations."
  TUR_combat_rebels_in_ahikerya_tt:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §R+30.0%§!\n"
- TUR_combat_rebels_in_ahikerya_tt2:0 "Modify[TUR_get_state_minority] by\n£political_violence_texticon  Resistance Target: §G-10%§!\n£attrition_texticon  Division Attrition: §G-30.0%§!\n"
+ TUR_combat_rebels_in_ahikerya_tt2:0 "Modify [TUR_get_state_minority] by\n£political_violence_texticon  Resistance Target: §G-10%§!\n£attrition_texticon  Division Attrition: §G-30.0%§!\n"
  TUR_combat_rebels_in_ahikerya_tt3:0 "Modify [TUR_get_state_minority] by\n£attrition_texticon  Division Attrition: §G-30.0%§!\n"
  TUR_grant_autonomy_to_ahikerya:0 "Grant Autonomy to [975.GetName]"
  TUR_grant_autonomy_to_ahikerya_desc:0 "The recent Greek revolt in [975.GetName] has tightened our hands. Due to the georgaphical limitations, simply taking down the rebellion would take too much time. Simply granting the island autonomy would solve the problem."
- TUR_grant_autonomy_to_ahikerya_tt:0 "\nModify[TUR_get_state_minority] by\n£political_violence_texticon  Resistance Target: §G-100%§!\n"
+ TUR_grant_autonomy_to_ahikerya_tt:0 "\nModify [TUR_get_state_minority] by\n£political_violence_texticon  Resistance Target: §G-100%§!\n"
+
+ TUR_get_state_minority_effect:0 "Modify [TUR_get_state_minority] by\n"
  TUR_armenian_to_greek_minority:0 "Replace £ww1_flag_ARM  §YArmenian Minority§! with £ww1_game_rule_flag_GRE  §YGreek Minority§!\nEffective change:\n[TUR_minority_attrition_down][TUR_minority_army_defence_factor_down][TUR_minority_enemy_local_supplies_down][TUR_minority_recruitable_population_down][TUR_minority_stability_war_support_down][TUR_minority_stability_down][TUR_minority_war_support_down]"
  TUR_armenian_to_jewish_minority:0 "Replace £ww1_flag_ARM  §YArmenian Minority§! with £ww1_flag_ISR  §YJewish Minority§!\nEffective change:\n[TUR_minority_attrition_down][TUR_minority_army_defence_factor_down][TUR_minority_enemy_local_supplies_down][TUR_minority_recruitable_population_down][TUR_minority_stability_war_support_down][TUR_minority_stability_down][TUR_minority_war_support_down]"
  TUR_armenian_to_south_slavic_minority:0 "Replace £ww1_flag_ARM  §YArmenian Minority§! with £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§!\nEffective change:\n[TUR_minority_attrition_down][TUR_minority_army_defence_factor_down][TUR_minority_enemy_local_supplies_down][TUR_minority_recruitable_population_down][TUR_minority_stability_war_support_down][TUR_minority_stability_down][TUR_minority_war_support_down]"
@@ -3072,8 +3074,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_lift_the_mutasarrifate_of_izmit_desc:0 "Mutasarrifate of İzmit being an autonomous sanjak under Vilayet of Hüdavendigar. Under our centralization efforts, we'll lift this special status of İzmit and make it a yet again Ottoman vilayet."
  TUR_lift_the_mutasarrifate_of_biga:0 "Lift the Mutasarrifate of Biga"
  TUR_lift_the_mutasarrifate_of_biga_desc:0 "Mutasarrifate of Biga is an autonomous Sanjak within the vilayet of Archipelago. Under our centralization efforts, we'll lift this special status of Biga and make it a yet again Ottoman vilayet."
- TUR_lift_the_mount_lebanon_mutasarrifate:0 "Lift the Mount Lebanon Mutasarrifate"
- TUR_lift_the_mount_lebanon_mutasarrifate_desc:0 "Established under the foreign supervision, Mount Lebanon Mutasarrifate is an autonomous Mutasarrifate ruled by Mutasarrifs. Under our centralization efforts, we'll lift this special status of Mount Lebanon and make it a yet again Ottoman vilayet."
+ TUR_occupy_mount_lebanon_mutasarrifate:0 "Lift the Mount Lebanon Mutasarrifate"
+ TUR_occupy_mount_lebanon_mutasarrifate_desc:0 "Established under the foreign supervision, Mount Lebanon Mutasarrifate is an autonomous Mutasarrifate with a vide autonomy. Apart from various exceptions, we're forbidden to put troops in the region. By occupying Mount Lebanon, we'll decrease their defacto autonomy and put troops in the region."
+ TUR_occupy_mount_lebanon_mutasarrifate_tt:0 "Replace §YAutonomous Mutasarrifate§! with §YAutonomous Vilayet§!\nEffective change:\n"
  TUR_lift_the_mutasarrifate_of_jerusalem:0 "Lift the Mutasarrifate of Jerusalem"
  TUR_lift_the_mutasarrifate_of_jerusalem_desc:0 "Established due to foreign interest, Mutasarrifate of Jerusalem was established in 1872 as a region with special status. Under our centralization efforts, we'll lift this special status of Jerusalem and make it a yet again Ottoman vilayet."
  TUR_abolish_the_sharifate_of_mecca:0 "Abolish the Sharifate of Mecca"
@@ -3231,7 +3234,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_stability_1:0 "£stability_texticon  Stability: §G+0.10%§!\n"
  TUR_minority_war_support_down:0 "[TUR_minority_war_support_down]"
  TUR_minority_war_support_normal:0 "£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
- TUR_minority_stability_up_1:0 "\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n"
+ TUR_minority_stability_up_1:0 "Modify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n"
 
  TUR_sway_the_army:0 "Sway the Army"
  TUR_sway_the_army_desc:0 "Army has always held an important position in the Ottoman society. Especially after the 31 March Incident, importance of army became more and more entrenched. Importance of the army even tips off the balance in the struggle for control over the regime."
@@ -7798,12 +7801,19 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_ottoman_recruitable_population_factor_mount_lebanon_yes:0 "\n£manpower_texticon  Recruitable Population: [?553.TUR_ottoman_recruitable_population_factor|=2%+]"
  TUR_ottoman_state_production_speed_buildings_factor_mount_lebanon_yes:0 "\n£construction_speed_texticon  Local Construction Speed: [?553.TUR_ottoman_state_production_speed_buildings_factor|=0%+]"
  TUR_ottoman_state_autonomous_vilayet_mount_lebanon_yes:0 "\n\n§LThis state is an §YAutonomous Vilayet§!. The following effects on the state are:§![TUR_ottoman_state_autonomous_vilayet_modifier_mount_lebanon]"
+ TUR_ottoman_state_autonomous_vilayet_mount_lebanon_yes_lebanon:0 "\n\n§LThis state is an §YAutonomous Vilayet§!. The following effects on the state are:§![TUR_ottoman_state_autonomous_vilayet_modifier_mount_lebanon_lebanon]"
  TUR_ottoman_state_autonomous_vilayet_modifier_mount_lebanon_yes:0 "[TUR_ottoman_state_autonomous_vilayet_local_resources_factor_mount_lebanon][TUR_ottoman_state_autonomous_vilayet_local_factories_mount_lebanon][TUR_ottoman_state_autonomous_vilayet_compliance_growth_mount_lebanon][TUR_ottoman_state_autonomous_vilayet_recruitable_population_factor_mount_lebanon][TUR_ottoman_state_autonomous_vilayet_stability_factor_mount_lebanon]"
+ TUR_ottoman_state_autonomous_vilayet_modifier_mount_lebanon_lebanon_yes:0 "[TUR_ottoman_state_autonomous_vilayet_local_resources_factor_mount_lebanon][TUR_ottoman_state_autonomous_vilayet_local_factories_mount_lebanon_lebanon][TUR_ottoman_state_autonomous_vilayet_compliance_growth_mount_lebanon_lebanon][TUR_ottoman_state_autonomous_vilayet_recruitable_population_factor_mount_lebanon_lebanon][TUR_ottoman_state_autonomous_vilayet_stability_factor_mount_lebanon_lebanon]"
  TUR_ottoman_state_autonomous_vilayet_local_resources_factor_mount_lebanon_yes:0 "\n£resources_texticon  Resource Gain Efficiency: [?TUR.TUR_ottoman_autonomy_local_resources_factor|=2%+]"
+ TUR_ottoman_state_autonomous_vilayet_local_resources_factor_mount_lebanon_yes_lebanon:0 "\n£resources_texticon  Resource Gain Efficiency: §R-50.00%§!"
  TUR_ottoman_state_autonomous_vilayet_local_factories_mount_lebanon_yes:0 "\n£civ_factory  Local Factories: [?TUR.TUR_ottoman_autonomy_local_factories|=0%+]"
+ TUR_ottoman_state_autonomous_vilayet_local_factories_mount_lebanon_yes_lebanon:0 "\n£civ_factory  Local Factories: §R-50%§!"
  TUR_ottoman_state_autonomous_vilayet_compliance_growth_mount_lebanon_yes:0 "\n£compliance_gain_texticon  Compliance Growth Speed [?TUR.TUR_ottoman_autonomy_compliance_growth|=0%+]"
+ TUR_ottoman_state_autonomous_vilayet_compliance_growth_mount_lebanon_yes_lebanon:0 "\n£compliance_gain_texticon  Compliance Growth Speed §G+5%§!"
  TUR_ottoman_state_autonomous_vilayet_recruitable_population_factor_mount_lebanon_yes:0 "\n£manpower_texticon  Recruitable Population: [?TUR.TUR_ottoman_autonomy_recruitable_population_factor|=2%+]"
+ TUR_ottoman_state_autonomous_vilayet_recruitable_population_factor_mount_lebanon_yes_lebanon:0 "\n£manpower_texticon  Recruitable Population: §R-80.00%§!"
  TUR_ottoman_state_autonomous_vilayet_stability_factor_mount_lebanon_yes:0 "\n\n§WModifies §Y[TUR_separatist_sentiments_tt]§! by§!\n£stability_texticon  Stability: [?TUR.TUR_ottoman_autonomy_stability_factor|=2%+]"
+ TUR_ottoman_state_autonomous_vilayet_stability_factor_mount_lebanon_yes_lebanon:0 "\n\n§WModifies §Y[TUR_separatist_sentiments_tt]§! by§!\n£stability_texticon  Stability: §G+2.00%§!"
  TUR_ottoman_state_stability_war_support_factor_mount_lebanon_yes:0 "\n\n§WModifies §Y[TUR_separatist_sentiments_tt]§! by§![TUR_ottoman_state_stability_factor_mount_lebanon][TUR_ottoman_state_war_support_factor_mount_lebanon][TUR_ottoman_state_political_power_factor_mount_lebanon][TUR_ottoman_state_consumer_goods_factor_mount_lebanon]"
  TUR_ottoman_state_stability_factor_mount_lebanon_yes:0 "\n£stability_texticon  Stability: [?553.TUR_ottoman_state_stability_factor|=2%+]"
  TUR_ottoman_state_war_support_factor_mount_lebanon_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?553.TUR_ottoman_state_war_support_factor|=2%+]"
