Hungary Early Horty tree

--- a/localisation/english/ww1_hungary_l_english.yml
+++ b/localisation/english/ww1_hungary_l_english.yml
@@ -54,14 +54,28 @@
  crisis_plus_20:0 "+ §G20§! Entente points!"
 
  #focus
+ HUN_from_the_ashes_of_the_empire:0 "From the Ashes of the Empire"
  HUN_social_democracy:0 "Magyar Népköztársaság"
  HUN_labor_reforms:0 "Labor Reforms"
  HUN_social_reforms:0 "Social Reforms"
- HUN_land_reforms:0 "Land Reforms"
+ HUN_land_reforms:0 "Land Reform"
  HUN_fire_the_high_command:0 "Fire the High Command"
  HUN_the_soldiers_council:0 "Ally the Soldier's Council"
  HUN_minority_politics:0 "Minority Politics"
- HUN_canton_project:0 "Magyarország Kantonjai"
+ HUN_canton_project:0 "Kelet-Svájc Projekt"
+ HUN_second_times_the_charm:0 "Magyar Köztársaság"
+ HUN_suffrage_reforms:0 "Suffrage Reforms"
+ HUN_withdraw_soviet_decrees:0 "Withdraw Soviet Decrees"
+ HUN_huszar_coalition_government:0 "Huszár Coalition Government"
+ HUN_domestic_policies:0 "Domestic Policies"
+ HUN_foreign_policies:0 "Foreign Policies"
+ HUN_bread_and_work:0 "Bread & Work"
+ HUN_economic_reforms:0 "Economic Reforms"
+ HUN_settlement_of_social_public_situations:0 "Settlement of Social Public Situations"
+ HUN_christian_politics:0 "Christian Politics"
+ HUN_establish_the_national_assembly:0 "Establish the National Assembly"
+ HUN_secret_rearmement:0 "Limited Rearmement"
+ HUN_large_scale_rearmement:0 "Large-Scale Rearmement"
 
  #idea
  HUN_economy_in_ruins:0 "Economy in ruins"
